--- a/11_snes_cradle/src/common/CMakeLists.txt
+++ b/11_snes_cradle/src/common/CMakeLists.txt
@@ -4,4 +4,5 @@ target_compile_options( ${PROJECT_NAME}
     PRIVATE "SHELL:-I ${CMAKE_CURRENT_SOURCE_DIR}" )
 
 target_sources( ${PROJECT_NAME}
+    PRIVATE Joypad.s
     PRIVATE Vector.s )
