--- a/11_snes_cradle/CMakeLists.txt
+++ b/11_snes_cradle/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required( VERSION 3.21 FATAL_ERROR )
 set( MEMORY_MAP_FILE ${CMAKE_CURRENT_SOURCE_DIR}/MemoryMap.cfg )
 list( APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" )
 
-project( BackgroundModes
+project( SNESCradle
          LANGUAGES CA65816 )
 
 add_executable( ${PROJECT_NAME} "" )
